# noda

./: .gitignore  CMakeLists.txt  README.md  keywords.txt  library.json  library.properties
.github/workflows/: on_publish.yml
.sls.tencent/: index.py  serverless.yml
core/: noda.c  noda_bus_center.c  noda_device_center.c
examples/00_hello/: 00_hello.ino  main.c
examples/00_noda_hi/: hi_sensor.c  hi_sensor.h  main.c
examples/01_device/: dummy_adc_sensor.c  dummy_adc_sensor.h  main.c
examples/02_bus/: hi_sensor.c  hi_sensor.h  main.c
examples/03_cloud/: main.c
examples/Arduino Uno/eeprom_read/: eeprom_read.ino  user.ino
examples/GetChipId/: GetChipId.ino
examples/arduino/00_hello/: 00_hello.ino  ticos_config.h
examples/arduino/03_cloud/: 03_cloud.ino  README.md  noda_iot.c  noda_iot.h  noda_mqtt.c  noda_mqtt.h  noda_wifi.cpp  noda_wifi.h  ti_iot_hal.c  ti_iot_hal.cpp  ti_thingmodel.h  ti_thingmodel.json  ticos_hal.c  ticos_iot.c  ticos_iot.h  ticos_thingmodel.c  ticos_thingmodel.h  ticos_thingmodel.json
examples/esp32/00_hello/: CMakeLists.txt
examples/esp32/00_hello/main/: 00_hello.c  CMakeLists.txt  main.c  ticos_project.h
examples/esp32/01_device/: CMakeLists.txt
examples/esp32/01_device/main/: 01_device.c  CMakeLists.txt  main.c  ticos_config.h  ticos_hal.h
examples/esp32/02_bus/: CMakeLists.txt
examples/esp32/02_bus/main/: 02_bus.c  CMakeLists.txt  main.c  (+3 more)
examples/esp32/03_cloud/: CMakeLists.txt  README.md
examples/esp32/GetChipID/: GetChipID.ino  user.ino
examples/noda_test/: user.c
examples/unix/00_hello/: 00_hello.c  CMakeLists.txt  main.c  ticos_config.h
extras/scripts/cmake/: noda.cmake
inc/: noda.h  noda_bus.h  noda_bus_center.h  noda_common.h  noda_device.h  noda_device_center.h  noda_i2c.h  noda_internal.h  noda_log.h  noda_ntc_sensor.h  noda_task.h  noda_time.h  noda_utils.h
inc/bus/: noda_i2c.h
inc/device/: noda_io.h  noda_ntc_sensor.h
noda-library/src/: noda.h
noda-library/src/core/: bus_center.c  device_center.c  noda.c
noda-library/src/noda/: bus.h  bus_center.h  device.h  device_center.h  internal.h  log.h  platform.h  task.h  time.h
script/: noda_hal_gen.py
script/templates/: dev_c  dev_h
scripts/cmake/: noda.cmake  ticos.cmake
scripts/codegen/: create_ticos_hal.py  create_ticos_proj.py  kick_off.py  noda_hal_gen.py  noda_proj_gen.py  ticos_hal_gen.py  ticos_proj_gen.py
scripts/codegen/templates/: conf_h  dev_c  dev_h  iot_c  iot_h  main_c  mqtt_wrapper.c  proj_h
src/: noda.h  noda_arduino_device_center.h  noda_internal.h  noda_linux_device_center.h  noda_ntc_sensor.h  noda_scene.h  noda_utils.h  ticos.h  ticos_framework.h
src/bus/: noda_i2c.c
src/core/: bus_center.c  device_center.c  noda.c  noda_bus_center.c  noda_device.c  noda_device_center.c  ticos_framework.c
src/device/: gpio.c  noda_i2c.c  noda_io.c  noda_ntc_sensor.c
src/nil/: noda_wifi.cpp  wifi.cpp
src/noda/: bus.h  bus_center.h  common.h  device.h  device_center.h  internal.h  log.h  platform.h  task.h  time.h
src/noda/bus/: i2c.h
src/noda/device/: gpio.h
src/noda/nil/: wifi.h
src/os/freertos/: task.c  time.c
src/platform/arduino/: noda_arduino_device_center.c
src/platform/linux/: noda_device_center.c  noda_linux_device_center.c  noda_platform.c  noda_task.c  noda_utils.c
src/ticos/: bus.h  bus_center.h  bus_center_internal.h  common.h  device.h  device_center.h  device_center_internal.h  internal.h  log.h  platform.h  task.h  time.h
src/ticos/bus/: i2c.h
src/ticos/device/: gpio.h
src/ticos/nil/: wifi.h
(+35 files in other folders)
